change dns name in helm manifests

--- a/k8s/argocd/argocd-ingress.yaml
+++ b/k8s/argocd/argocd-ingress.yaml
@@ -14,7 +14,7 @@ metadata:
 spec:
   ingressClassName: nginx
   rules:
-  - host: pfe-gitops-devsecops.eastus.cloudapp.azure.com
+  - host: pfe-adactim.eastus.cloudapp.azure.com
     http:
       paths:
       - backend:
