--- a/k8s/helm/ingress-nginx/values.yaml
+++ b/k8s/helm/ingress-nginx/values.yaml
@@ -455,7 +455,7 @@ controller:
 
     annotations:
       service.beta.kubernetes.io/azure-load-balancer-health-probe-request-path: /healthz
-      service.beta.kubernetes.io/azure-dns-label-name: pfe-gitops-devsecops
+      service.beta.kubernetes.io/azure-dns-label-name: pfe-adactim
     labels: {}
     # clusterIP: ""
 
