--- a/k8s/helm/kube-prometheus-stack/values.yaml
+++ b/k8s/helm/kube-prometheus-stack/values.yaml
@@ -227,7 +227,7 @@ alertmanager:
   ## An example template:
     pfe_template.tmpl: |-
         {{ define "cluster" }}{{ .ExternalURL | reReplaceAll ".*alertmanager\\.(.*)" "$1" }}{{ end }}
-        {{ define "__alertmanager" }}PFE-GitOps-DevSecOps AlertManager{{ end }}
+        {{ define "__alertmanager" }}pfe-adactim AlertManager{{ end }}
         {{ define "__alertmanagerURL" }}{{ .ExternalURL }}/#/alerts?receiver={{ .Receiver | urlquery }}{{ end }}
         {{ define "__subject" }}[{{ .Status | toUpper }}{{ if eq .Status "firing" }}:{{ .Alerts.Firing | len }}{{ end }}] {{ .GroupLabels.SortedPairs.Values | join " " }} {{ if gt (len .CommonLabels) (len .GroupLabels) }}({{ with .CommonLabels.Remove .GroupLabels.Names }}{{ .Values | join " " }}{{ end }}){{ end }}{{ end }}
         {{ define "__description" }}{{ end }}
@@ -355,7 +355,7 @@ alertmanager:
     ## Hosts must be provided if Ingress is enabled.
     ##
     hosts:
-      - pfe-gitops-devsecops.eastus.cloudapp.azure.com
+      - pfe-adactim.eastus.cloudapp.azure.com
 
     ## Paths to use for ingress rules - one path should match the alertmanagerSpec.routePrefix
     ##
@@ -372,7 +372,7 @@ alertmanager:
     tls: 
       - secretName: tls-secret
         hosts:
-        - pfe-gitops-devsecops.eastus.cloudapp.azure.com
+        - pfe-adactim.eastus.cloudapp.azure.com
 
   ## Configuration for Alertmanager secret
   ##
@@ -641,7 +641,7 @@ alertmanager:
 
     ## The external URL the Alertmanager instances will be available under. This is necessary to generate correct URLs. This is necessary if Alertmanager is not served from root of a DNS name. string  false
     ##
-    externalUrl: https://pfe-gitops-devsecops.eastus.cloudapp.azure.com/alertmanager
+    externalUrl: https://pfe-adactim.eastus.cloudapp.azure.com/alertmanager
 
     ## The route prefix Alertmanager registers HTTP handlers for. This is useful, if using ExternalURL and a proxy is rewriting HTTP routes of a request, and the actual ExternalURL is still true,
     ## but the server serves requests under a different route prefix. For example for use with kubectl proxy.
@@ -2370,7 +2370,7 @@ prometheus:
 
     ## External URL at which Prometheus will be reachable.
     ##
-    externalUrl: https://pfe-gitops-devsecops.eastus.cloudapp.azure.com/prometheus
+    externalUrl: https://pfe-adactim.eastus.cloudapp.azure.com/prometheus
 
     ## Define which Nodes the Pods are scheduled on.
     ## ref: https://kubernetes.io/docs/user-guide/node-selection/
@@ -2632,7 +2632,7 @@ prometheus:
           module: [http_2xx]
         static_configs:
           - targets: 
-            - https://pfe-gitops-devsecops.eastus.cloudapp.azure.com/app/actuator/health
+            - https://pfe-adactim.eastus.cloudapp.azure.com/app/actuator/health
         relabel_configs:
         - source_labels: [__address__]
           target_label: __param_target
@@ -2660,7 +2660,7 @@ prometheus:
         scrape_interval: 5s
         static_configs:
           - targets: 
-            - https://pfe-gitops-devsecops.eastus.cloudapp.azure.com
+            - https://pfe-adactim.eastus.cloudapp.azure.com
         relabel_configs:
         - source_labels: [__address__]
           target_label: __param_target
