--- a/k8s/alertmanager-ingress.yaml
+++ b/k8s/alertmanager-ingress.yaml
@@ -10,7 +10,7 @@ metadata:
 spec:
   ingressClassName: nginx
   rules:
-  - host: pfe-gitops-devsecops.eastus.cloudapp.azure.com
+  - host: pfe-adactim.eastus.cloudapp.azure.com
     http:
       paths:
       - path: /alertmanager/?(.*)
@@ -22,5 +22,5 @@ spec:
               name: http-web
   tls:
   - hosts:
-    - pfe-gitops-devsecops.eastus.cloudapp.azure.com
+    - pfe-adactim.eastus.cloudapp.azure.com
     secretName: tls-secret
