--- a/k8s/app-ingress.yaml
+++ b/k8s/app-ingress.yaml
@@ -10,7 +10,7 @@ metadata:
 spec:
   ingressClassName: nginx
   rules:
-  - host: pfe-gitops-devsecops.eastus.cloudapp.azure.com
+  - host: pfe-adactim.eastus.cloudapp.azure.com
     http:
       paths:
       - path: /app(.*)
@@ -22,5 +22,5 @@ spec:
               number: 8080
   tls:
   - hosts:
-    - pfe-gitops-devsecops.eastus.cloudapp.azure.com
+    - pfe-adactim.eastus.cloudapp.azure.com
     secretName: tls-secret
