Updated app ACR host

--- a/k8s/app-deployment.yaml
+++ b/k8s/app-deployment.yaml
@@ -23,7 +23,7 @@ spec:
     spec:
       containers:
       - name: pfe-gitops-demo-app
-        image: pfegitops.azurecr.io/pfe-gitops-demo:1.182
+        image: pfegitopsacr.azurecr.io/pfe-gitops-demo:1.185
         imagePullPolicy: Always
         env:
           - name: MYSQL_HOST
